--- a/login.html
+++ b/login.html
@@ -9,7 +9,7 @@
 
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-
 awesome/4.7.0/css/font-awesome.min.css">
-<link rel="stylesheet" href="./assets/css/style.css" type="text/css">
+<link rel="stylesheet" href="./assets/css/login-style.css" type="text/css">
 </head>
 
 <body>
