login opne update

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
       <nav class="navbar" data-navbar>
 
         <div class="wrapper">
-          <!-- <a href="login.html" class="logo">
+          <!-- <a href="./login.html" class="logo">
             <img src="./assets/images/logo.svg" width="162" height="50" alt="EduWeb logo">
           </a> -->
           <b>Learnly</b>
@@ -69,7 +69,7 @@
         <ul class="navbar-list">
 
           <li class="navbar-item">
-            <a href="login.htmlhome" class="navbar-link" data-nav-link>Home</a>
+            <a href="./login.html" class="navbar-link" data-nav-link>Home</a>
           </li>
 
           <li class="navbar-item">
@@ -104,7 +104,7 @@
           <span class="btn-badge">0</span>
         </button>
 
-        <a href="login.html" class="btn has-before">
+        <a href="./login.html" class="btn has-before">
           <span class="span">Try for free</span>
 
           <ion-icon name="arrow-forward-outline" aria-hidden="true"></ion-icon>
@@ -146,7 +146,7 @@
               Unless they are blinded by lust, they do not come out.
             </p>
 
-            <a href="login.html" class="btn has-before">
+            <a href="./login.html" class="btn has-before">
               <span class="span">Find courses</span>
 
               <ion-icon name="arrow-forward-outline" aria-hidden="true"></ion-icon>
@@ -203,7 +203,7 @@
                 </div>
 
                 <h3 class="h3">
-                  <a href="login.html" class="card-title">Online Degree Programs</a>
+                  <a href="./login.html" class="card-title">Online Degree Programs</a>
                 </h3>
 
                 <p class="card-text">
@@ -224,7 +224,7 @@
                 </div>
 
                 <h3 class="h3">
-                  <a href="login.html" class="card-title">Non-Degree Programs</a>
+                  <a href="./login.html" class="card-title">Non-Degree Programs</a>
                 </h3>
 
                 <p class="card-text">
@@ -245,7 +245,7 @@
                 </div>
 
                 <h3 class="h3">
-                  <a href="login.html" class="card-title">Off-Campus Programs</a>
+                  <a href="./login.html" class="card-title">Off-Campus Programs</a>
                 </h3>
 
                 <p class="card-text">
@@ -266,7 +266,7 @@
                 </div>
 
                 <h3 class="h3">
-                  <a href="login.html" class="card-title">Hybrid Distance Programs</a>
+                  <a href="./login.html" class="card-title">Hybrid Distance Programs</a>
                 </h3>
 
                 <p class="card-text">
