--- a/index.html
+++ b/index.html
@@ -42,13 +42,13 @@
 <body id="top">
 
   <!-- 
-    - #HEADER
+    - login.htmlHEADER
   -->
 
   <header class="header" data-header>
     <div class="container">
 
-      <!-- <a href="#" class="logo">
+      <!-- <a href="login.html" class="logo">
         <img src="./assets/images/logo.svg" width="162" height="50" alt="EduWeb logo">
       </a> -->
       <b>Learnly</b>
@@ -56,7 +56,7 @@
       <nav class="navbar" data-navbar>
 
         <div class="wrapper">
-          <!-- <a href="./login.html" class="logo">
+          <!-- <a href="login.html" class="logo">
             <img src="./assets/images/logo.svg" width="162" height="50" alt="EduWeb logo">
           </a> -->
           <b>Learnly</b>
@@ -69,23 +69,23 @@
         <ul class="navbar-list">
 
           <li class="navbar-item">
-            <a href="./login.html" class="navbar-link" data-nav-link>Home</a>
+            <a href="login.htmlhome" class="navbar-link" data-nav-link>Home</a>
           </li>
 
           <li class="navbar-item">
-            <a href="#about" class="navbar-link" data-nav-link>About</a>
+            <a href="login.htmlabout" class="navbar-link" data-nav-link>About</a>
           </li>
 
           <li class="navbar-item">
-            <a href="#courses" class="navbar-link" data-nav-link>Courses</a>
+            <a href="login.htmlcourses" class="navbar-link" data-nav-link>Courses</a>
           </li>
 
           <li class="navbar-item">
-            <a href="#blog" class="navbar-link" data-nav-link>Blog</a>
+            <a href="login.htmlblog" class="navbar-link" data-nav-link>Blog</a>
           </li>
 
           <li class="navbar-item">
-            <a href="#" class="navbar-link" data-nav-link>Contact</a>
+            <a href="login.html" class="navbar-link" data-nav-link>Contact</a>
           </li>
 
         </ul>
@@ -104,7 +104,7 @@
           <span class="btn-badge">0</span>
         </button>
 
-        <a href="./login.html" class="btn has-before">
+        <a href="login.html" class="btn has-before">
           <span class="span">Try for free</span>
 
           <ion-icon name="arrow-forward-outline" aria-hidden="true"></ion-icon>
@@ -129,7 +129,7 @@
     <article>
 
       <!-- 
-        - #HERO
+        - login.htmlHERO
       -->
 
       <section class="section hero has-bg-image" id="home" aria-label="home"
@@ -146,7 +146,7 @@
               Unless they are blinded by lust, they do not come out.
             </p>
 
-            <a href="./login.html" class="btn has-before">
+            <a href="login.html" class="btn has-before">
               <span class="span">Find courses</span>
 
               <ion-icon name="arrow-forward-outline" aria-hidden="true"></ion-icon>
@@ -176,7 +176,7 @@
 
 
       <!-- 
-        - #CATEGORY
+        - login.htmlCATEGORY
       -->
 
       <section class="section category" aria-label="category">
@@ -203,7 +203,7 @@
                 </div>
 
                 <h3 class="h3">
-                  <a href="./login.html" class="card-title">Online Degree Programs</a>
+                  <a href="login.html" class="card-title">Online Degree Programs</a>
                 </h3>
 
                 <p class="card-text">
@@ -224,7 +224,7 @@
                 </div>
 
                 <h3 class="h3">
-                  <a href="./login.html" class="card-title">Non-Degree Programs</a>
+                  <a href="login.html" class="card-title">Non-Degree Programs</a>
                 </h3>
 
                 <p class="card-text">
@@ -245,7 +245,7 @@
                 </div>
 
                 <h3 class="h3">
-                  <a href="./login.html" class="card-title">Off-Campus Programs</a>
+                  <a href="login.html" class="card-title">Off-Campus Programs</a>
                 </h3>
 
                 <p class="card-text">
@@ -266,7 +266,7 @@
                 </div>
 
                 <h3 class="h3">
-                  <a href="./login.html" class="card-title">Hybrid Distance Programs</a>
+                  <a href="login.html" class="card-title">Hybrid Distance Programs</a>
                 </h3>
 
                 <p class="card-text">
@@ -288,7 +288,7 @@
 
 
       <!-- 
-        - #ABOUT
+        - login.htmlABOUT
       -->
 
       <section class="section about" id="about" aria-label="about">
@@ -356,7 +356,7 @@
 
 
       <!-- 
-        - #COURSE
+        - login.htmlCOURSE
       -->
 
       <section class="section course" id="courses" aria-label="course">
@@ -387,7 +387,7 @@
                   <span class="badge">Beginner</span>
 
                   <h3 class="h3">
-                    <a href="#" class="card-title">Build Responsive Real- World Websites with HTML and CSS</a>
+                    <a href="login.html" class="card-title">Build Responsive Real- World Websites with HTML and CSS</a>
                   </h3>
 
                   <div class="wrapper">
@@ -446,7 +446,7 @@
                   <span class="badge">Advanced</span>
 
                   <h3 class="h3">
-                    <a href="#" class="card-title">Java Programming Masterclass for Software Developers</a>
+                    <a href="login.html" class="card-title">Java Programming Masterclass for Software Developers</a>
                   </h3>
 
                   <div class="wrapper">
@@ -505,7 +505,7 @@
                   <span class="badge">Intermediate</span>
 
                   <h3 class="h3">
-                    <a href="#" class="card-title">The Complete Camtasia Course for Content Creators</a>
+                    <a href="login.html" class="card-title">The Complete Camtasia Course for Content Creators</a>
                   </h3>
 
                   <div class="wrapper">
@@ -547,7 +547,7 @@
 
           </ul>
 
-          <a href="#" class="btn has-before">
+          <a href="login.html" class="btn has-before">
             <span class="span">Browse more courses</span>
 
             <ion-icon name="arrow-forward-outline" aria-hidden="true"></ion-icon>
@@ -561,7 +561,7 @@
 
 
       <!-- 
-        - #VIDEO
+        - login.htmlVIDEO
       -->
 
       <section class="video has-bg-image" aria-label="video"
@@ -595,7 +595,7 @@
 
 
       <!-- 
-        - #STATE
+        - login.htmlSTATE
       -->
 
       <section class="section stats" aria-label="stats">
@@ -645,7 +645,7 @@
 
 
       <!-- 
-        - #BLOG
+        - login.htmlBLOG
       -->
 
       <section class="section blog has-bg-image" id="blog" aria-label="blog"
@@ -668,14 +668,14 @@
 
                 <div class="card-content">
 
-                  <a href="#" class="card-btn" aria-label="read more">
+                  <a href="login.html" class="card-btn" aria-label="read more">
                     <ion-icon name="arrow-forward-outline" aria-hidden="true"></ion-icon>
                   </a>
 
-                  <a href="#" class="card-subtitle">Online</a>
+                  <a href="login.html" class="card-subtitle">Online</a>
 
                   <h3 class="h3">
-                    <a href="#" class="card-title">Become A Better Blogger: Content Planning</a>
+                    <a href="login.html" class="card-title">Become A Better Blogger: Content Planning</a>
                   </h3>
 
                   <ul class="card-meta-list">
@@ -713,14 +713,14 @@
 
                 <div class="card-content">
 
-                  <a href="#" class="card-btn" aria-label="read more">
+                  <a href="login.html" class="card-btn" aria-label="read more">
                     <ion-icon name="arrow-forward-outline" aria-hidden="true"></ion-icon>
                   </a>
 
-                  <a href="#" class="card-subtitle">Online</a>
+                  <a href="login.html" class="card-subtitle">Online</a>
 
                   <h3 class="h3">
-                    <a href="#" class="card-title">Become A Better Blogger: Content Planning</a>
+                    <a href="login.html" class="card-title">Become A Better Blogger: Content Planning</a>
                   </h3>
 
                   <ul class="card-meta-list">
@@ -758,14 +758,14 @@
 
                 <div class="card-content">
 
-                  <a href="#" class="card-btn" aria-label="read more">
+                  <a href="login.html" class="card-btn" aria-label="read more">
                     <ion-icon name="arrow-forward-outline" aria-hidden="true"></ion-icon>
                   </a>
 
-                  <a href="#" class="card-subtitle">Online</a>
+                  <a href="login.html" class="card-subtitle">Online</a>
 
                   <h3 class="h3">
-                    <a href="#" class="card-title">Become A Better Blogger: Content Planning</a>
+                    <a href="login.html" class="card-title">Become A Better Blogger: Content Planning</a>
                   </h3>
 
                   <ul class="card-meta-list">
@@ -809,7 +809,7 @@
 
 
   <!-- 
-    - #FOOTER
+    - login.htmlFOOTER
   -->
 
   <footer class="footer" style="background-image: url('./assets/images/footer-bg.png')">
@@ -819,7 +819,7 @@
 
         <div class="footer-brand">
 
-          <!-- <a href="#" class="logo">
+          <!-- <a href="login.html" class="logo">
             <img src="./assets/images/logo-light.svg" width="162" height="50" alt="EduWeb logo">
           </a> -->
           <b>Learnly</b>
@@ -855,27 +855,27 @@
           </li>
 
           <li>
-            <a href="#" class="footer-link">About</a>
+            <a href="login.html" class="footer-link">About</a>
           </li>
 
           <li>
-            <a href="#" class="footer-link">Courses</a>
+            <a href="login.html" class="footer-link">Courses</a>
           </li>
 
           <li>
-            <a href="#" class="footer-link">Instructor</a>
+            <a href="login.html" class="footer-link">Instructor</a>
           </li>
 
           <li>
-            <a href="#" class="footer-link">Events</a>
+            <a href="login.html" class="footer-link">Events</a>
           </li>
 
           <li>
-            <a href="#" class="footer-link">Instructor Profile</a>
+            <a href="login.html" class="footer-link">Instructor Profile</a>
           </li>
 
           <li>
-            <a href="#" class="footer-link">Purchase Guide</a>
+            <a href="login.html" class="footer-link">Purchase Guide</a>
           </li>
 
         </ul>
@@ -887,27 +887,27 @@
           </li>
 
           <li>
-            <a href="#" class="footer-link">Contact Us</a>
+            <a href="login.html" class="footer-link">Contact Us</a>
           </li>
 
           <li>
-            <a href="#" class="footer-link">Gallery</a>
+            <a href="login.html" class="footer-link">Gallery</a>
           </li>
 
           <li>
-            <a href="#" class="footer-link">News & Articles</a>
+            <a href="login.html" class="footer-link">News & Articles</a>
           </li>
 
           <li>
-            <a href="#" class="footer-link">FAQ's</a>
+            <a href="login.html" class="footer-link">FAQ's</a>
           </li>
 
           <li>
-            <a href="#" class="footer-link">Sign In/Registration</a>
+            <a href="login.html" class="footer-link">Sign In/Registration</a>
           </li>
 
           <li>
-            <a href="#" class="footer-link">Coming Soon</a>
+            <a href="login.html" class="footer-link">Coming Soon</a>
           </li>
 
         </ul>
@@ -933,31 +933,31 @@
           <ul class="social-list">
 
             <li>
-              <a href="#" class="social-link">
+              <a href="login.html" class="social-link">
                 <ion-icon name="logo-facebook"></ion-icon>
               </a>
             </li>
 
             <li>
-              <a href="#" class="social-link">
+              <a href="login.html" class="social-link">
                 <ion-icon name="logo-linkedin"></ion-icon>
               </a>
             </li>
 
             <li>
-              <a href="#" class="social-link">
+              <a href="login.html" class="social-link">
                 <ion-icon name="logo-instagram"></ion-icon>
               </a>
             </li>
 
             <li>
-              <a href="#" class="social-link">
+              <a href="login.html" class="social-link">
                 <ion-icon name="logo-twitter"></ion-icon>
               </a>
             </li>
 
             <li>
-              <a href="#" class="social-link">
+              <a href="login.html" class="social-link">
                 <ion-icon name="logo-youtube"></ion-icon>
               </a>
             </li>
@@ -975,10 +975,10 @@
 
 
   <!-- 
-    - #BACK TO TOP
+    - login.htmlBACK TO TOP
   -->
 
-  <a href="#top" class="back-top-btn" aria-label="back top top" data-back-top-btn>
+  <a href="login.htmltop" class="back-top-btn" aria-label="back top top" data-back-top-btn>
     <ion-icon name="chevron-up" aria-hidden="true"></ion-icon>
   </a>
 
